# Parallel-Sieve-of-Eratosthenes-for-Finding-All-Prime-Numbers

./: CMakeLists.txt  sieve0.c  sieve1.c  sieve2.c  sieve3.c
result/: final.txt
script/: data.sh  script_gen.py  submit.sh
